--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,8 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/asd"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/asdasd"/>
         <property name="context-root" value="proj_1"/>
         <property name="java-output-path" value="/proj_1/target/classes"/>
     </wb-module>
